src/objects/Campaign_Sales__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Sales</relationshipLabel>
        <relationshipName>Campaign_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Sales</relationshipLabel>
        <relationshipName>Campaign_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailed_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailed Vehicle</label>
        <referenceTo>Retailed_Vehicles__c</referenceTo>
        <relationshipLabel>Campaign Sales</relationshipLabel>
        <relationshipName>Campaign_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Sales</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Campaign Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>